syntax = "proto3";
option java_package = "com.api.grpc";
option java_multiple_files = true;

service ProductService {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 id = 1;
}

message ProductResponse {
  int64 id = 1;
  string name = 2;
  double price = 3;
}
